syntax = "proto3";

package org.project_planton.shared;

enum IacProvisioner {
  iac_provisioner_unspecified = 0;
  terraform = 1;
  pulumi = 2;
}
