syntax = "proto3";

package project.planton.credential.gitcredential.v1;

import "buf/validate/validate.proto";
import "project/planton/credential/gitcredential/v1/spec.proto";
import "project/planton/shared/shared.proto";

//git-credential
message GitCredential {
  //api-version
  string api_version = 1 [
    (buf.validate.field).string.const = 'credential.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2;

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3;

  //spec
  GitCredentialSpec spec = 4;

  //status
  project.planton.shared.ApiResourceLifecycleAndAuditStatus status = 5;
}
