syntax = "proto3";

package project.planton.shared.cloudresourcekind;

enum ProjectPlantonCloudResourceProvider {
  project_planton_cloud_resource_provider_unspecified = 0;
  test = 1;
  
  atlas = 2;
  aws = 3;
  azure = 4;
  civo = 5;
  cloudflare = 6;
  confluent = 7;
  digital_ocean = 8;
  gcp = 9;
  kubernetes = 10;
  snowflake = 11;
}

enum ProjectPlantonKubernetesResourceType {
  project_planton_kubernetes_resource_type_unspecified = 0;
  addon = 1;
  workload = 2;
}
