syntax = "proto3";

package project.planton.shared.iac.pulumi;

import "project/planton/credential/pulumibackendcredential/v1/spec.proto";
import "project/planton/shared/iac/iacgitrepo/iac_git_repo.proto";
import "project/planton/shared/iac/pulumi/enums.proto";

//pulumi stack info
message PulumiStackInfo {
  //pulumi operation
  PulumiOperationType operation = 1;
  //run preview of pulumi operation
  bool preview = 2;
  //pulumi backend
  project.planton.credential.pulumibackendcredential.v1.PulumiBackendCredentialSpec backend = 3;
  //pulumi project
  PulumiProject project = 4;
  //pulumi stack name
  string stack_name = 5;
  //iac-module git-repo
  project.planton.shared.iac.iacgitrepo.IacGitRepo git_repo = 6;
}

//pulumi project
//information required to setup pulumi project https://www.pulumi.com/docs/concepts/projects/project-file/#attributes
message PulumiProject {
  //name of the pulumi project to be used for setting name attribute in Pulumi.yaml
  string name = 1;
  //name of the pulumi project to be used for setting runtime attribute in Pulumi.yaml
  project.planton.shared.iac.pulumi.PulumiProjectRuntime runtime = 2;
}
